Add support for an item or economy cost Add config option for default permission level Update fallback head cache Bump version

--- a/src/main/resources/data/headindex/lang/en_us.json
+++ b/src/main/resources/data/headindex/lang/en_us.json
@@ -14,5 +14,6 @@
   "text.headindex.back": "Back",
   "text.headindex.search": "Search",
   "text.headindex.search.output": "Search: %s",
-  "text.headindex.playername": "Playername"
+  "text.headindex.playername": "Playername",
+  "text.headindex.price": "Price: %s"
 }
